# spdlog-cmake

./: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
